@@ -2,11 +2,12 @@
     "17.10.7": {
         "fix": {
             "luminance-hdr": "add-source",
-            "brave": "add-source",
+            "brave": "general",
             "anoise": "add-source",
             "peek": "add-source",
-            "libreoffice": "add-source",
-            "atom": "add-source"
+            "libreoffice": "general",
+            "atom": "add-source",
+            "solaar": "general"
         }
    },
     "17.10.6": {
