@@ -1,7 +1,8 @@
 ubuntu-mate-welcome (17.10.7) UNRELEASED; urgency=medium
 
   * Update Ambient Noise for Zesty and Artful.
-  * Update Atom, Brave, LibreOffice, Luminance-HDR and Peek for Artful.
+  * Update Atom, Brave, LibreOffice, Luminance-HDR, Peek and Solaar for
+    Artful.
 
  -- Martin Wimpress <martin@ubuntu-mate.org>  Tue, 20 Jun 2017 10:32:47 +0100
 
